--- a/personal-website/index.html
+++ b/personal-website/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/coin.png" />
+    <link rel="icon" type="image/png" href="./src/assets/dollar-sign.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Keaton Love</title>
   </head>
